Remove now-dead legacy code in test-clients/ and hapi-utils/
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>